--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-restify-mongoose": "^4.1.3",
     "express-session": "^1.15.0",
     "jade": "~1.11.0",
+    "method-override": "^2.3.7",
     "moment": "^2.17.1",
     "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
